Introduce sidebar regions
Sidebar regions are groups of elements on the sidebar that scroll
together, while allowing for the other elements to remain fixed.

They are useful for implementing static headers/footers.

On small screen devices, the region scrolling behavior is disabled,
and the entire sidebar scrolls normally instead.

--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -378,3 +378,16 @@ a.sidebar__button {
 		}
 	}
 }
+
+.sidebar__region {
+	ul {
+		display: flex;
+		flex-direction: column;
+	}
+
+	@include breakpoint( ">660px" ) {
+		overflow: auto;
+		flex: 1;
+		transform: translateX( 0 ); /* workaround for safari scrollbar rendering bug */
+	}
+}
