Footer and styling for footer added for issue #3164.
Footer is a simple p tag with a link. Link now points
to wp.com and needs updationg to proper location.

--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -252,6 +252,17 @@
 	padding: 0;
 }
 
+.themes__sheet-related-themes-link {
+
+	p {
+		text-align: center;
+		a {
+			color: inherit;
+			text-decoration: underline;
+		}
+	}
+}
+
 .themes__sheet-card-support {
 	display: flex;
 	align-items: center;
