Themes: Refactor feature tags to use original color instead of inherited.
* Also changed hardcoded background color with a relative color.

--- a/client/my-sites/themes/style.scss
+++ b/client/my-sites/themes/style.scss
@@ -335,14 +335,9 @@
 	li {
 		list-style: none;
 		display: inline-block;
-
-		// Commenting background and color from tags to avoid suggesting they are clickable.
-
-		// background: #E9EFF3;
-		// color: $gray-dark;
-
-		color: inherit; // When tags are made clickable, this style can be removed.
-
+		// Commenting background color from tags to avoid suggesting they are clickable.
+		// background: lighten( $gray, 30% );
+		color: $gray-dark;
 		font-size: 0.925em;
 		margin: 0.38em 0.37rem;
 		padding: 0.25em 0.7em;
