Add explicit check for regions and disable scroll

--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -37,6 +37,12 @@
 			transform: translateX( 100vw );
 		}
 	}
+
+	@include breakpoint( ">660px" ) {
+		&.has-regions {
+			overflow: hidden;
+		}
+	}
 }
 
 
