--- a/client/my-sites/plugins-wpcom/style.scss
+++ b/client/my-sites/plugins-wpcom/style.scss
@@ -10,15 +10,6 @@
 	.wpcom-plugins__plugin-item {
 		opacity: 0.5;
 	}
-	
-	.wpcom-plugins__plugin-icon {
-		background: $gray;
-	}
-}
-
-.wpcom-plugin-panel .section-header {
-	border-bottom: 2px solid $blue-medium;
-	margin-bottom: 0;
 }
 
 .wpcom-plugins__list {
@@ -32,11 +23,11 @@
 	padding: 16px;
 	border-bottom: 1px solid lighten( $gray, 20% );
 	width: 100%;
-	
+
 	&:last-child {
 		border-bottom: none;
 	}
-	
+
 	@include breakpoint( ">960px" ) {
 		width: 33.33%;
 		border-right: 1px solid lighten( $gray, 20% );
@@ -69,8 +60,9 @@
 .wpcom-plugins__plugin-icon {
 	width: 40px;
 	height: 40px;
-	background: $blue-medium;
+	background: lighten( $gray, 10%);
 	float: left;
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -80,18 +72,24 @@
 	fill: $white;
 }
 
+.wpcom-plugins__plugin-icon .gridicons-checkmark-circle {
+	position: absolute;
+		bottom: -5px;
+	border-radius: 100%;
+	fill: $alert-green;
+	background: $white;
+}
+
 .wpcom-plugins__plugin-title,
 .wpcom-plugins__plugin-category,
 .wpcom-plugins__plugin-plan {
 	margin-left: 52px;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
 }
 
 .wpcom-plugins__plugin-title {
 	font-size: 14px;
 	font-weight: 600;
+	line-height: 1.4;
 }
 
 .wpcom-plugins__plugin-category,
@@ -109,7 +107,7 @@
 
 .wpcom-plugin-panel button.is-active-plugin {
 	color: $alert-green;
-	
+
 	&:hover {
 		color: $alert-green;
 	}
