Add a Guided Transfer option to the main exporter page The primary button and text are inactive as this will come later Also add a new configuration variable so that this option is only enabled on the development environment.

--- a/client/my-sites/exporter/style.scss
+++ b/client/my-sites/exporter/style.scss
@@ -80,3 +80,15 @@
 		width: 100%;
 	}
 }
+
+// START GUIDED TRANSFER
+.exporter__guided-transfer-options-header-title-container {
+	display: inline-block;
+	float: left;
+}
+
+.exporter__guided-transfer-options-header-button-container {
+	display: inline-block;
+	float: right;
+}
+// END GUIDED TRANSFER
