google-voucher: added component

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -293,6 +293,7 @@
 @import 'my-sites/upgrades/checkout/style';
 @import 'my-sites/upgrades/checkout/subscription-text';
 @import 'my-sites/upgrades/checkout-thank-you/style';
+@import 'my-sites/upgrades/checkout-thank-you/google-voucher/style';
 @import 'my-sites/upgrades/components/domain-warnings/style';
 @import 'my-sites/upgrades/domain-management/transfer/style';
 @import 'my-sites/resume-editing/style';
