--- a/client/my-sites/ads/style.scss
+++ b/client/my-sites/ads/style.scss
@@ -121,3 +121,29 @@
 		max-width: 75%;
 	}
 }
+
+.ads__activate-header-title {
+	font-weight: 600;
+}
+
+.ads__activate-notice {
+	margin: 0;
+}
+
+.ads__activate-header-toggle, .ads__activate-header-title {
+	margin: auto 0 auto 0;
+}
+.ads__activate-wrapper {
+	padding: 0;
+}
+.ads__activate-header {
+	padding: 24px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.ads__activate-description {
+	border-top: 1px solid #e9eff3;
+	padding: 24px;
+}
