edit the classes for wordads sidebar item and main content
I found during testing that common ad-blockers on iphone rendered the sidebar item and the content of the WordAds page as totally invisible. This was based on a rule hiding anything with the class "ads". Changing this to the "rads" namespace fixes it in my testing.

--- a/client/my-sites/ads/style.scss
+++ b/client/my-sites/ads/style.scss
@@ -122,28 +122,28 @@
 	}
 }
 
-.ads__activate-header-title {
+.rads__activate-header-title {
 	font-weight: 600;
 }
 
-.ads__activate-notice {
+.rads__activate-notice {
 	margin: 0;
 }
 
-.ads__activate-header-toggle, .ads__activate-header-title {
+.rads__activate-header-toggle, .rads__activate-header-title {
 	margin: auto 0 auto 0;
 }
-.ads__activate-wrapper {
+.rads__activate-wrapper {
 	padding: 0;
 }
-.ads__activate-header {
+.rads__activate-header {
 	padding: 24px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 }
 
-.ads__activate-description {
+.rads__activate-description {
 	border-top: 1px solid #e9eff3;
 	padding: 24px;
 }
