CommunityTranslator: rename classes, clean CSS, use gridicon.

--- a/assets/stylesheets/shared/functions/_z-index.scss
+++ b/assets/stylesheets/shared/functions/_z-index.scss
@@ -86,7 +86,7 @@ $z-layers: (
 		'.main': 20, //TODO: this doesn't always have a stacking context
 		//'tinymce-toolbar': 20, client/components/tinymce/index.jsx
 		'.search': 22,
-		'#translator-launcher': 99,
+		'.community-translator': 99,
 		'.author-selector__popover.popover': 100,
 		'.search.is-pinned': 170,
 		'.select-dropdown.is-open .select-dropdown__container': 170,
