Remove the pointer cursor from plugin names

--- a/client/my-sites/plugins/jetpack-plugins-setup/style.scss
+++ b/client/my-sites/plugins/jetpack-plugins-setup/style.scss
@@ -17,6 +17,10 @@ $polldaddy-red:  #D45458;
 			content: ' ';
 		}
 	}
+
+	.plugin-item__link {
+		cursor: default;
+	}
 }
 
 .jetpack-plugins-setup__header {
