--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -317,6 +317,7 @@
 @import 'post-editor/editor-drawer-well/style';
 @import 'post-editor/editor-featured-image/style';
 @import 'post-editor/editor-fieldset/style';
+@import 'post-editor/editor-forbidden/style';
 @import 'post-editor/editor-ground-control/style';
 @import 'post-editor/editor-location/style';
 @import 'post-editor/editor-mobile-navigation/style';
