--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -88,6 +88,7 @@
 @import 'components/purchase-detail/style';
 @import 'components/push-notification/style';
 @import 'components/rating/style';
+@import 'components/related-posts/style';
 @import 'components/search/style';
 @import 'components/search-card/style';
 @import 'components/section-header/style';
