--- a/client/reader/start/style.scss
+++ b/client/reader/start/style.scss
@@ -34,11 +34,6 @@
 	padding-bottom: 100px;
 	transform: translateX( 0 ); // Prevents overflowing content from disappearing
 
-    @include breakpoint( ">960px" ) {
-	    column-count: 2;
-	    column-gap: 1em;
-    }
-
 	.site-icon {
 		border: 4px solid $white;
 		margin: 0 auto;
@@ -50,8 +45,8 @@
 
 	@include breakpoint( ">960px" ) {
 		display: inline-block;
-	    margin: 8px 5px 8px 2px;
-	    width: 100%;
+			margin: 8px 5px 8px 2px;
+			width: 350px;
 	}
 
 	&:first-child {
