Layout: use "masterbar-color" as a variable to replace blue value.

--- a/assets/stylesheets/shared/_colors.scss
+++ b/assets/stylesheets/shared/_colors.scss
@@ -1,4 +1,4 @@
-// Blues
+// Accents (Blues)
 $blue-wordpress:         #0087be;
 $blue-light:             #78dcfa;
 $blue-medium:            #00aadc;
@@ -39,3 +39,6 @@ $transparent:            rgba(255,255,255,0);
 
 // Uncommon
 $border-ultra-light-gray: #e8f0f5;
+
+// Layout
+$masterbar-color:          $blue-wordpress;
