Sidebar: refine color definitions to be derived from fewer colors.
- Set up new vars for sidebar background, highlight, and text.

--- a/assets/stylesheets/shared/_colors.scss
+++ b/assets/stylesheets/shared/_colors.scss
@@ -42,3 +42,6 @@ $border-ultra-light-gray: #e8f0f5;
 
 // Layout
 $masterbar-color:          $blue-wordpress;
+$sidebar-bg-color:         lighten( $gray, 30% );
+$sidebar-text-color:       $gray-dark;
+$sidebar-selected-color:   $gray;
