--- a/client/layout/masterbar/style.scss
+++ b/client/layout/masterbar/style.scss
@@ -69,7 +69,7 @@ $autobar-height: 20px;
 	}
 
 	&.is-active {
-		background: $blue-dark;
+		background: darken( $masterbar-color, 10% );
 	}
 
 	.is-support-user &.is-active {
@@ -238,7 +238,7 @@ $autobar-height: 20px;
 	}
 
 	&.is-active .masterbar__notifications-bubble {
-		border-color: $blue-dark;
+		border-color: darken( $masterbar-color, 10% );
 	}
 
 	&.has-unread .masterbar__notifications-bubble {
