Framework: Move localStorage polyfill to separate bundle

--- a/server/pages/index.jade
+++ b/server/pages/index.jade
@@ -129,12 +129,14 @@ html(lang=lang, dir=isRTL ? 'rtl' : 'ltr', class=isFluidWidth ? 'is-fluid-width'
 		if i18nLocaleScript
 			script(src=i18nLocaleScript)
 		if 'development' === env || isDebug
+			script(src=urls[ 'polyfill' ])
 			script(src=urls[ 'manifest' ])
 			script(src=urls[ 'vendor' ])
 			script(src=urls[ jsFile ])
 			if chunk
 				script(src=urls[ chunk ])
 		else
+			script(src=urls[ 'polyfill-min' ])
 			script(src=urls[ 'manifest-min' ])
 			script(src=urls[ 'vendor-min' ])
 			script(src=urls[ jsFile + '-min' ])
