Update to use the new syntext
fix syntext errors

Minor fixes

--- a/client/my-sites/stats/activity-log-item/style.scss
+++ b/client/my-sites/stats/activity-log-item/style.scss
@@ -159,6 +159,14 @@
 	text-transform: uppercase;
 	color: $gray;
 }
+.activity-item__content-title {
+	font-size: 14px;
+}
+.activity-item__content-sub-title {
+	font-size: 12px;
+	text-transform: uppercase;
+	color: $gray;
+}
 
 .activity-log-item__action {
 	flex-basis: 25%;
