Add vertical line
Fix className & indentation

Update styles

Remove vertical line tail

Refine header styles in date card

Make the object name bold(er)

--- a/client/my-sites/stats/activity-log-item/style.scss
+++ b/client/my-sites/stats/activity-log-item/style.scss
@@ -133,7 +133,7 @@
 }
 
 .activity-log-item__actor-name {
-	font-weight: bold;
+	font-weight: 600;
 }
 
 .activity-item__actor-role {
@@ -158,6 +158,7 @@
 
 .activity-log-item__content-title {
 	font-size: 14px;
+	font-weight: 600;
 }
 .activity-item__content-sub-title {
 	font-size: 12px;
