--- a/client/my-sites/stats/activity-log-date/style.scss
+++ b/client/my-sites/stats/activity-log-date/style.scss
@@ -14,3 +14,13 @@
 		z-index: 1;
 	}
 }
+
+.activity-log-date__day {
+	font-weight: 600;
+}
+
+.activity-log-date__events {
+	text-transform: uppercase;
+	font-size: 12px;
+	color: $gray;
+}
