--- a/client/my-sites/stats/activity-log/style.scss
+++ b/client/my-sites/stats/activity-log/style.scss
@@ -1,1 +1,16 @@
 // Activity Log
+
+.activity-log__wrapper {
+	position: relative;
+
+	&:after {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 31px;
+		width: 2px;
+		height: calc( 100% - 64px );
+		background-color: lighten( $gray, 20% );
+		z-index: 1;
+	}
+}
