--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -379,6 +379,7 @@
 @import 'my-sites/stats/activity-log-banner/style';
 @import 'my-sites/stats/activity-log-confirm-dialog/style';
 @import 'my-sites/stats/activity-log-day/style';
+@import 'my-sites/stats/activity-log-banner/style';
 @import 'my-sites/stats/activity-log-item/style';
 @import 'my-sites/stats/all-time/style';
 @import 'my-sites/stats/geochart/style';
