Update the ellipses component to pass the event to the onToggle function
This is done so that we can stop the event from propagating.

Add description to activity items

Add descriptions to activity items

--- a/client/my-sites/stats/activity-log-item/style.scss
+++ b/client/my-sites/stats/activity-log-item/style.scss
@@ -106,6 +106,13 @@
 	align-items: center;
 }
 
+
+.activity-log-item__card-header {
+	display: flex;
+	flex: 1;
+	align-items: center;
+}
+
 .activity-log-item__actor {
 	display: flex;
 	flex: 2 1;
