Add video editor block to enable selection of custom video thumbnails

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -68,6 +68,7 @@
 @import 'blocks/taxonomy-manager/style';
 @import 'blocks/term-form-dialog/style';
 @import 'blocks/term-tree-selector/style';
+@import 'blocks/video-editor/style';
 @import 'components/accordion/style';
 @import 'components/animate/style';
 @import 'components/async-load/style';
