--- a/client/blocks/video-editor/style.scss
+++ b/client/blocks/video-editor/style.scss
@@ -28,13 +28,9 @@
 
 .video-editor__preview-wrapper .spinner,
 .video-editor__preview {
-	display: flex;
-	align-items: center;
 	position: absolute;
 		top: 50%;
 		left: 50%;
-	height: 100%;
-	width: 100%;
 	max-height: 100%;
 	max-width: 100%;
 	transform: translate( -50%, -50% );
@@ -42,6 +38,13 @@
 	.spinner__border {
 		fill: transparent;
 	}
+}
+
+.video-editor__preview {
+	display: flex;
+	align-items: center;
+	height: 100%;
+	width: 100%;
 }
 
 .video-editor__text {
