--- a/client/me/purchases/manage-purchase/style.scss
+++ b/client/me/purchases/manage-purchase/style.scss
@@ -1,16 +1,20 @@
 .manage-purchase__info {
 	font-size: 13px;
-	padding: 16px;
+	padding: 0;
 
 	@include breakpoint ( ">660px" ) {
 		font-size: 14px;
-		padding: 16px 24px;
+		padding: 0;
 	}
 
 	&.is-expired {
 		background: $gray-light;
 
-		.manage-purchase__content {
+		.manage-purchase__header,
+		.manage-purchase__content,
+		.manage-purchase__detail-label,
+		.manage-purchase__detail,
+		.manage-purchase__detail .user {
 			opacity: .6;
 		}
 	}
@@ -70,64 +74,92 @@
 	}
 }
 
+.manage-purchase__header,
+.manage-purchase__content {
+	padding: 16px 24px;
+
+	@include breakpoint( "<660px" ) {
+		padding: 16px;
+	}
+}
+
 .manage-purchase__header {
 	overflow: auto;
-	padding: 0 0 16px 0;
+	border-width: 0 0 2px;
+	border-style: solid;
+
+	.is-personal & {
+		border-color: $alert-yellow;
+	}
+
+	.is-premium & {
+		border-color: $alert-green;
+	}
+
+	.is-business & {
+		border-color: $alert-purple;
+	}
+}
+
+.manage-purchase__plan-icon {
+	margin: 0 12px 0 0;
+	max-width: 56px;
+	width: 56px;
+	float: left;
+
+	.gridicons-domains {
+		padding: 4px;
+		border-radius: 50%;
+		background: $blue-medium;
+		fill: $white;
+	}
 }
 
 .manage-purchase__title {
-	color: $gray-dark;
+	color: $blue-wordpress;
 	display: block;
 	font-size: 18px;
 	font-weight: 400;
+	clear: none;
 
 	@include breakpoint( ">660px" ) {
-		font-family: $serif;
-		font-size: 24px;
-		font-weight: 700;
+		font-size: 22px;
 		padding-right: 100px;
 	}
 }
 
-.manage-purchase__subtitle {
-	color: darken( $gray, 10% );
+.manage-purchase__price .plan-price {
+	clear: none;
+	margin-top: -6px;
+}
+
+.manage-purchase__description {
+	color: $gray-text-min;
 	display: block;
-	font-size: 11px;
-	text-transform: uppercase;
 }
 
 .manage-purchase__settings-link {
-	font-size: 13px;
-	line-height: 1.75em;
-
-	.gridicon {
-		position: relative;
-		top: 2px;
-		left: 3px;
-		color: $gray;
-	}
+	display: block;
+	margin-top: 16px;
 }
 
 .manage-purchase__meta,
 .manage-purchase__contact-support {
-	margin: 0 -24px;
 	padding: 0 24px;
 	border-top: 1px solid lighten( $gray, 30% );
 
 	@include breakpoint( "<660px" ) {
-		margin: 0 -16px;
 		padding: 0 16px;
 	}
 }
 
 .manage-purchase__meta {
 	display: flex;
-	margin-bottom: -16px;
+	margin: 0;
 	list-style: none;
 	overflow: auto;
 
 	@include breakpoint( "<660px" ) {
-		margin-bottom: 0;
 		flex-direction: column;
 	}
 
