--- a/assets/stylesheets/_vendor.scss
+++ b/assets/stylesheets/_vendor.scss
@@ -1,7 +1,7 @@
 // External Dependencies
 @import '../../node_modules/react-virtualized/styles';
 @import '../../node_modules/draft-js/dist/Draft';
-@import '../../node_modules/notifications-panel/public/build.css';
+@import '../../node_modules/notifications-panel/src/boot/stylesheets/style';
 
 .gridicon {
 	fill: currentColor;
