--- a/assets/stylesheets/sections/_notifications.scss
+++ b/assets/stylesheets/sections/_notifications.scss
@@ -15,14 +15,19 @@
 	}
 
 	&.wpnt-open {
+		right: 0;
+		transition: all 0.15s cubic-bezier(0.075, 0.82, 0.165, 1);
 		opacity: 1;
 		pointer-events: auto;
+		visibility: visible;
 	}
 
 	&.wpnt-closed {
+		visibility: hidden;
+		right: -400px;
 		opacity: 0;
 		pointer-events: none;
-		display: none;
+		transition: all 0.15s cubic-bezier(0.075, 0.82, 0.165, 1);
 	}
 
 	&.wpnc__main .wpnc__time-group-title.fixed {
