Editor Diff Viewer: Display the revision content with the additions highlighted and the deletions stroked through.

--- a/client/post-editor/editor-diff-viewer/style.scss
+++ b/client/post-editor/editor-diff-viewer/style.scss
@@ -16,3 +16,12 @@
 	max-width: 700px;
 	width: 100%;
 }
+
+.editor-diff-viewer__additions {
+	background: #e9f9fe;
+}
+
+.editor-diff-viewer__deletions {
+	color: #c83240;
+	text-decoration: line-through;
+}
