Post Editor: Support for revisions flow on mobiles

--- a/client/post-editor/editor-action-bar/style.scss
+++ b/client/post-editor/editor-action-bar/style.scss
@@ -74,6 +74,10 @@
 	}
 }
 
+.focus-child .editor-action-bar {
+	display: none;
+}
+
 .editor-action-bar .button {
 	color: darken( $gray, 10% );
 	background: transparent;
