--- a/client/components/forms/form-text-input-with-affixes/style.scss
+++ b/client/components/forms/form-text-input-with-affixes/style.scss
@@ -14,7 +14,8 @@
 	input[type="email"],
 	input[type="password"],
 	input[type="url"],
-	input[type="text"] {
+	input[type="text"],
+	input[type="number"] {
 		flex-grow: 1;
 
 		&:focus {
