--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -483,6 +483,7 @@
 @import 'signup/steps/design-type/style';
 @import 'signup/steps/domains/style';
 @import 'signup/steps/site-or-domain/style';
+@import 'signup/steps/site-picker/style';
 @import 'signup/steps/survey/style';
 @import 'signup/steps/plans/style';
 @import 'signup/steps/site/style';
