WooCommerce: Add header to product create page.

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -17,6 +17,19 @@
 	@import 'app/settings/shipping/style';
 	@import 'components/list/style';
 
+	.products__header {
+		width: 100%;
+	}
+
+	.products__header-right {
+		position: absolute;
+		top: 16px;
+		right: 24px;
+
+		.button {
+			margin-left: 8px;
+		}
+	}
 }
 
 .store-sidebar__sidebar {
