apply a consistent width to dimension inputs and align them to remove double border

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -205,9 +205,7 @@
 	overflow-x: auto;
 }
 
-.products__product-form-variation-table-wrapper .form-text-input-with-affixes .form-text-input,
-.products__product-form-variation-table-wrapper .form-dimensions-input__length,
-.products__product-form-variation-table-wrapper .form-dimensions-input__width{
+.products__product-form-variation-table-wrapper .form-text-input-with-affixes .form-text-input {
 	min-width: 80px;
 }
 
