--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -77,6 +77,10 @@
 		resize: vertical;
 	}
 
+	.products__product-form-delivery-details-dimensions {
+		width: 30%;
+	}
+
 	.products__variation-types-form-wrapper {
 		padding: 24px;
 		border-top: 1px solid $gray-light;
