Wrap the choice in an a tag, to help with a11y

--- a/client/signup/steps/site-or-domain/style.scss
+++ b/client/signup/steps/site-or-domain/style.scss
@@ -43,6 +43,10 @@
 	display: none;
 }
 
+.site-or-domain__choice-text {
+	color: $gray-dark;
+}
+
 @include breakpoint( ">480px" ) {
 	.site-or-domain__choice-button {
 		margin-bottom: 1.5em;
