update the designs of  the  verification  with app screen

--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -72,3 +72,7 @@
 	display: block;
 	margin-bottom: 16px;
 }
+
+.card.two-factor-authentication__form-action {
+	background: lighten( $gray, 34% );
+}
